# plugin-sqlite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  sqliteplugin.qrc
inc/: sqliteplugin.h  sqliteplugin.json
src/: sqliteplugin.cpp
